--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hello World</title>
 </head>
 <body>
-    <p>This is a test base to see how forge works</p>
+    <p>This is a test base to see how forge works, this is from github</p>
     <form data-forge-name="Forum" action="get">
         <label for="name">Name</label>
         <input type="text" name="name" data-forge-name="Name">
